--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ sudo: false
 matrix:
     fast_finish: true
     include:
+        - php: 5.6
+          env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest"
         - php: 7.0
           env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest"
         - php: 7.1
