--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,12 @@
     "license": "MIT",
     "keywords": ["PHPUnit", "Extension", "diff", "udiff", "unidiff", "unified diff"],
     "require": {
-        "php": "^7.0",
-        "sebastian/diff": "^2.0"
+        "php": "^5.6 || ^7.0",
+        "php-cs-fixer/diff": "^1.1.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.7",
-        "phpunit/phpunit": "^6.3.0",
+        "phpunit/phpunit": "^4.8.35 || ^5.4.3",
         "symfony/process": "^3.3"
     },
     "autoload": {
